<resources>
    <string name="app_name">READ IAT</string>
    <string name="right"> সঠিক  </string>
    <string name="wrong"> ভুল </string>
    <string name="cash_mode"> ছাত্র   </string>
    <string name="cash_mode2">ছাত্রী </string>
    <string name="nextpage">পরবর্তী  পাতা</string>
    <string name="savenextpage">জমা করুন এবং \Nপরবর্তী  পাতায় যান</string>
    <string name="first"> প্রথম </string>
    <string name="second"> দ্বিতীয় </string>
    <string name="third"> তৃতীয় </string>
    <string name="next"> পরবর্তী </string>
    <string name="res"> ফলাফল </string>
    <string name="export"> এক্সেল ফাইল এ রূপান্তর করুন  </string>
    <string name="grade1"> গ্রেড এক </string>
    <string name="grade2"> গ্রেড দুই </string>
    <string name="grade3"> গ্রেড তিন </string>
    <string name="app_instructions">
 \t\t\t \t\t\t \t\t\t \t\t\t \t\t\t  \t\t\tনির্দেশনা সমন্বয় প্রশ্নপত্র   \n
  \t\t\t\t\t\t \t\t\t  \t\t\t \t\t\t(Instructional Adjustment Tools-IAT)\n
        পরিচিতিঃ \n
        এটি একটি বিশেষায়িত প্রশ্নপত্র। প্রথম শ্রেণি থেকে তৃতীয় শ্রেণির সংশ্লিষ্ট বাংলা শিক্ষক এই প্রশ্নপত্র ব্যবহার করে শিক্ষার্থীদের পঠন দক্ষতার অগ্রগতি যাচাই করেন। সংশ্লিষ্ট বাংলা শিক্ষক একজন একজন করে শিক্ষার্থীর মৌখিক পরীক্ষা নিয়ে থাকেন। \n
        \nনির্দেশনা সমন্বয় প্রশ্নপত্র/টুলসঃ \n
        যে প্রশ্নপত্র/টুলস ব্যবহার করে শিক্ষক শিক্ষার্থীদের পড়তে শেখার ৫ টি উপাদানের (১.বর্ণজ্ঞান, ২. ধ্বনিসচেতনতা, ৩. শব্দভান্ডার, ৪. সাবলীলতা ও ৫. বোধগম্যতা) অবস্থান যাচাই করে তাকে নির্দেশনা সমন্বয় প্রশ্নপত্র /টুলস বলে। \n
       \nনির্দেশনা সমন্বয় প্রশ্নপত্র ব্যবহারের উদ্দেশ্যঃ \n
        \tশিক্ষক এই প্রক্রিয়া ব্যবহার করে উন্নয়ন প্রয়োজন এমন শিক্ষার্থীদের চিহ্নিত করতে পারেন \n
	\tপড়তে শেখার কোন উপাদানের সামর্থ্য অর্জনে শিক্ষার্থীর বেশি অসুবিধা হয় শিক্ষক তা চিহ্নিত করতে পারেন\n
	\tশিক্ষক উন্নয়ন প্রয়োজন এমন শিক্ষার্থীদের জন্য তার নির্দেশনায় কাঙ্খিত পরিবর্তন আনতে পারবেন\n
        	\nসর্বোপরি, প্রত্যাশা করা হয় শিক্ষক শিক্ষার্থীদের পড়তে শেখার ৫ টি উপাদানের অবস্থান যাচাই করে প্রাপ্ত ফলাফলের ভিত্তিতে উন্নত, উন্নয়নশীল এবং উন্নয়ন প্রয়োজন শিক্ষার্থীদের জন্য শিক্ষক তার নির্দেশনায় প্রয়োজনীয় পরিবর্তনের মাধ্যমে শিক্ষার্থীদের জন্য নিরাময়মূলক ব্যবস্থা গ্রহণ করবেন।\n
        \nনম্বর প্রদান প্রক্রিয়া  ঃ\n
        প্রতিটি উপাদানে তিনটি করে প্রশ্ন দেয়া আছে। শিক্ষার্থী তিনটি প্রশ্নেরই সঠিক উত্তর দিতে পারলে “মাস্টারি/উন্নিত” হিসেবে ধরা হয়, দুটি প্রশ্নের সঠিক উত্তর দিতে পারলে “ডেভেলপিং/উন্নয়নশীল”, একটি বা কোন প্রশ্নের সঠিক উত্তর দিতে না পারলে “নিড ইমপ্রুভমেন্ট/উন্নয়নযোগ্য” হিসেবে ধরা হয় ।
    </string>
    <string name="btn_title0">Name &amp; Roll</string>
    <string name="btn_title1"> প্রথম অংশ </string>
    <string name="btn_title2">দ্বিতীয়  অংশ </string>
    <string name="btn_title3">তৃতীয় অংশ </string>
    <string name="btn_title4">Date</string>
    <string name="btn_res">Result List</string>
    <string name="btn_text1st">1st</string>
    <string name="btn_text2nd">2nd</string>
    <string name="btn_text3rd">3rd</string>
    <string name="nirdeshona"> নির্দেশনা</string>
    <string name="borno"> ধ্বনির মিল</string>
    <string name="question">যেভাবে সম্পাদন করতে হবে: শিক্ষার্থীকে উদাহরণ দিয়ে বুঝিয়ে দিন। যেমন, শিক্ষার্থীকে বলুন- “অ”- তে অজগর হয়, অনেক হয়, অলি হয়। এরকম "ও" দিয়ে একটি শব্দ বলতে বলুন অথবা "ই" দিয়ে একটি শব্দ বলতে বলুন। নিচের  পাঁচটি সাধারণ বর্ণ দিয়ে শব্দ বলতে বলুন। </string>
    <string name="question11"> ১.১	শিক্ষার্থী কি এলোমেলোভাবে সাজানো ১১টি বর্ণের সবগুলো চিনতে পারে?</string>
    <string name="question12"> ১.২	শিক্ষার্থী কি এলোমেলোভাবে সাজানো ৩৯ টি ব্যঞ্জনবর্ণের সবগুলো চিনতে পারে? </string>
    <string name="question13">১.৩ শিক্ষার্থী কি এমন কোনো শব্দের উদাহরণ দিতে পারে যা একটি সাধারণ বর্ণ দিয়ে শুরু হয়?  </string>
    <string name="question21">২.১ শিক্ষার্থী শব্দ উচ্চারণের সময়ে ধ্বনিগত পার্থক্য বজায় রাখতে পারে কি? </string>
    <string name="question22">২.২ শিক্ষার্থী কি শব্দের প্রথম বর্ণের বা শব্দাংশের ধ্বনির মিল বুঝতে পারে?</string>
    <string name="question23">২.৩ শিক্ষার্থী কি শব্দের শেষ বর্ণের বা শব্দাংশের ধ্বনির মিল বুঝতে পারে?  </string>
    <string name="question31">৩.১ ১ নং ছবির সেট মিল করতে পেরেছে   </string>
    <string name="question32">৩.২ ২ নং ছবির সেট মিল করতে পেরেছে  </string>
    <string name="question33">৩.৩ ৩ নং ছবির সেট মিল করতে পেরেছে   </string>
    <string-array name="iat_11">
        <item name="set1"> বর্ণজ্ঞান </item>
        <item name="set1"> বর্ণজ্ঞান </item>
        <item name="set1">বর্ণজ্ঞান  </item>
        <item name="set1"> ধ্বনি- সচেতনতা </item>
        <item name="set1"> ধ্বনি- সচেতনতা </item>
        <item name="set1"> ধ্বনি- সচেতনতা </item>
        <item name="set1"> বোধগম্যতা </item>
        <item name="set1"> বোধগম্যতা  </item>
        <item name="set1"> বোধগম্যতা </item>
        <item name="set1">  </item>
        <item name="set1">  </item>



    </string-array>
    <string-array name="word_set">
        <item name="set1"> শিক্ষার্থ </item>
        <item name="set2"> শিক্ষার্থ </item>
        <item name="set3"> শিক্ষার্থ </item>
        <item name="set4"> শিক্ষার্থ </item>

        <item name="set4">        </item>

    </string-array>
    <string-array name="single_letter">
        <item name="set1">আ	  | আতা,আদা, আম,আলু ইত্যাদি </item>
        <item name="set2"> ই	| ইলিশ,ইঁদুর,ইট ইত্যাদি </item>
        <item name="set3">উ	  | উট, উঠান, উনুন, উড়াল ইত্যাদি</item>
        <item name="set4">এ	  | এক, এত,এদিক, এলাচ, একতারা ইত্যাদি</item>
        <item name="set5">ও	  | ওড়না,ওল, ওঝা, ওষুধ  ইত্যাদি </item>

    </string-array>
    <string-array name="wordmeaning_1st_letter">
        <item name="set1"> আম |	আতা	| পড়ি </item>
        <item name="set2"> উট |	ইট	| ইলিশ </item>
        <item name="set3"> ঋতু |	ঋষি |	অলি </item>
        <item name="set4"> উষা |	ঈগল	| ঈশান </item>

        <item name="set5">ওল | ওড়না | এক </item>

    </string-array>
    <string-array name="spelling_sound">
        <item name="set1"> ভুল উচ্চারণ  |	শুদ্ধ উচ্চারণ</item>
        <item name="set2"> অতি	| ওতি </item>
        <item name="set3">অদ্য | 	ওদ্দো</item>
        <item name="set4"> অন্য | 	ওন্নো </item>
        <item name="set5">অতীত | 	ওতিত্ </item>
        <item name="set5">অভিধান | 	ওভিধান</item>

    </string-array>
    <string-array name="wordmeaning_last_letter">
        <item name="set1">উঠান |	আতা	| তোতা </item>
        <item name="set2"> মউ |	বউ | ইলিশ </item>
        <item name="set3">আম |	ইট	| উট</item>
        <item name="set4"> আলো | ভালো	| পাখি </item>
        <item name="set5">ইতল |	বালিশ	| বিতল </item>

    </string-array>
    <string-array name="question_set_q1_2">
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>
        <item name="set1">১.১ শিক্ষার্থী কি এলোমেলোভাবে সাজানো বর্ণগুলো থেকে ৫০টি বর্ণের    সবগুলো চিনতে পারে?</item>


        <item name="set1">১.২ শিক্ষার্থী কি এমন কোনো শব্দের উদাহরণ দিতে পারে যা একটি সাধারণ   বর্ণ দিয়ে শুরু হয়?  </item>
        <item name="set1">১.৩ শিক্ষার্থী কি তাদের নামের বর্ণগুলো বলতে পারে?  </item>
        <item name="set1">২.১ শিক্ষার্থী কি শব্দের প্রথম বর্ণের বা শব্দাংশের ধ্বনির মিল বুঝতে পারে? </item>
        <item name="set1"> ২.২ শিক্ষার্থী কি শব্দের শেষ বর্ণের বা শব্দাংশের ধ্বনির মিল বুঝতে পারে?</item>
        <item name="set1">২.৩ শিক্ষার্থী কি উচ্চারণের সময়ে ধ্বনিগত পার্থক্য বজায় রাখতে পারে?     </item>

        <item name="set1"> ৩.১ শিক্ষার্থী কি বহুল ব্যবহৃত শব্দগুলোর বিপরীত শব্দ বলতে পারে?   </item>

        <item name="set1">  ৩.২ শিক্ষার্থী কি বহুল ব্যবহৃত শব্দগুলির অর্থ বুঝিয়ে বলতে পারে?  </item>
        <item name="set1"> ৩.৩ শিক্ষার্থী কি বহুল ব্যবহৃত শব্দগুলি ব্যবহার করে বাক্য রচনা পারে?
  </item>


    </string-array>
    <string-array name="g1q2_2">
        <item name="set1">গাছ	| আতা	| গান</item>
        <item name="set2">মাছ |	মাটি	| ইলিশ</item>
        <item name="set3">ডাল	| নদী	| ডাব</item>
        <item name="set4"> বাঘ | 	হরিণ	 | বাগান </item>
        <item name="set5"> পাতা	| জবা	| পাখা</item>

    </string-array>
    <string-array name="g1q2_3">
        <item name="set1"> গাছ	| মাছ |	মামা</item>
        <item name="set1">পানি	| নদী	| নানি </item>
        <item name="set1">হাসি|	গাজর |	খাসি </item>
        <item name="set1"> ডাল | 	জাল |	জগ</item>
        <item name="set1">কলা | 	পাখি |	মুলা </item>

    </string-array>
    <string-array name="g1q2_4">
        <item name="set1">জেলে	|  ছেলে</item>
        <item name="set1"> বেলা	|  ভেলা </item>
        <item name="set1"> ডাল	| ঢাল</item>
        <item name="set1">ধান	| দান </item>
        <item name="set1">ফুল	|পুল </item>

    </string-array>
    <string-array name="g1q2_5">
        <item name="set1">আজ	| কাল </item>
        <item name="set1"> দেশ	|  বিদেশ </item>
        <item name="set1"> ছোট	| বড় </item>
        <item name="set1">দিন	| রাত </item>
        <item name="set1">সকাল	| বিকাল </item>

    </string-array>
    <string-array name="g1q2_6">
        <item name="set1"> শেফালী	 | একটি ফুলের নাম/মেয়ের  নাম</item>
        <item name="set1"> খুশি	| আনন্দ,ফুর্তি </item>
        <item name="set1"> জেলে	 | যে মাছ ধরে </item>
        <item name="set1"> রাখাল	 |  যে গরু চড়ায়</item>
        <item name="set1"> চাষী	 | যে কৃষি কাজ করে/কৃষক</item>
    </string-array>
    <string-array name="g1q2_7">
        <item name="set1">আকাশ	| নদী	| গরু	| ফসল </item>
        <item name="set1">নৌকা	|      দেশ	| বাঘ	| গাছ</item>
        <item name="set1">জাল	| বাগান	| ছুটি	|ফুল </item>
        <item name="set1">ডাল	| পাতা	| বাঁশি	| মাছ </item>
        <item name="set1">বাবা	| মধু	| ফল	| পড়ি  </item>
    </string-array>
</resources>