<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ict.sci.kidslearning.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"

        android:textStyle="bold"
        android:textColor="@color/red"
        android:text=" জিলার নামঃ" />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/dist_id"
        android:textColor="@color/red"
        android:hint=" জিলার নামঃ " />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="20dp"

        android:textStyle="bold"
        android:textColor="@color/red"
    android:text="স্কুলের নামঃ " />


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/school_id"
        android:textColor="@color/red"
        android:hint="স্কুলের নামঃ " />

    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textSize="20dp"-->
        <!--android:id="@+id/school_id"-->
        <!--android:textColor="@color/red"-->
        <!--android:hint="স্কুলের নামঃ " />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"

        android:textColor="@color/red"
        android:text="ছাত্র/ ছাত্রীর নামঃ " />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/student_id"
        android:textColor="@color/red"
        android:hint="ছাত্র/ ছাত্রীর নামঃ" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="ক্লাসের নামঃ " />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/class_id"
        android:textColor="@color/red"
        android:hint="ক্লাসের নামঃ" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lay6"
        android:layout_below="@+id/lay5"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/time_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="5dp"

            android:text="Gender: "
            android:textColor="#000000"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radiotype"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_mode"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash_mode2" />

        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="রোল নং ঃ " />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/roll_id"
        android:textColor="@color/red"
        android:inputType="number"
        android:hint="রোল নং ঃ" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/savenextpage"
        android:background="@drawable/buttoncolor"
        android:textColor="@color/white"
        android:id="@+id/button2"
        android:onClick="next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="500dp"
        android:layout_marginTop="15dip"
        >



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/res"
        android:soundEffectsEnabled="true"
        android:background="@drawable/buttoncolor"
        android:textColor="@color/white"
        android:id="@+id/res_id"
        android:onClick="result"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export"
        android:soundEffectsEnabled="true"
        android:background="@drawable/buttoncolor"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:id="@+id/export_id"
        android:onClick="export"


        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center" />

    </LinearLayout>
</LinearLayout>
